@@ -1,3 +1,12 @@
+2016-02-20  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
+  * doc/gputils.lyx, gpasm/directive.c, gpasm/gpasm.h.in,
+    gpasm/parse.y, gpasm/preprocess.c, gpasm/scan.l:
+    New directives: elif, elifdef, elifndef
+    These directives can not be used in mpasm compatible mode!
+
+  * gpasm/util.c:
+    Bugfix in find_hv_macro() function.
+
 2016-02-16  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
   * doc/gputils.lyx, gpasm/directive.c, gpasm/gpasm.c,
     gpasm/gpasm.h.in, gpasm/processor.c, gpasm/util.c,
